# DynamicSegmentGraph

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark_compactg_arbitrary.cc  benchmark_deep_arbitrary.cc  benchmark_deep_halfbounded.cc  build_index.cc  compact_stream.cc  generate_groundtruth.cc  getIncrementalGroundtruth.cc  incremental_knnfirst.cc  incremental_stream.cc  knnfirst.cc  ordered_serfVsDsg.cc  query_index.cc  query_opt_dsg.cc  scalibility_exp.cc  streaming_exp.cc  test_onlinedomination.cc
exp/ilab/search/deep/100k/: compact_arbit.txt  deep_arbit.txt
exp/ilab/search/deep/10k/: compact_arbit.txt  deep_arbit.txt
exp/ilab/search/deep/1M/: compact_arbit.txt  deep_arbit.txt
exp/ilab/search/wiki/100k/: compact_arbit.txt  deep_arbit.txt
exp/ilab/search/wiki/1m/: compact_arbit.txt  deep_arbit.txt
exp/ilab/static_query/: staticQueryLogOf3DatasetsIn32M.txt
exp/ilab/static_query/deep/100K/: compact.txt  seg.txt
exp/ilab/static_query/deep/10M/: compact.txt
exp/ilab/static_query/draw/: getExpRecords.py
exp/ilab/static_query/wiki/100K/: compact.txt  seg.txt
exp/ilab/static_query/wiki/1m/: buil.txt  compact.txt  seg.txt
exp/ilab/static_query/wiki/1m_8_500_100/: compact.txt
exp/ilab/static_query/yt8m-audio/1m/: seg.txt
exp/ilab/static_query/yt8m-audio/1m_16_750_100/: build.txt  compact.txt  seg.txt
exp/ilab/static_query/yt8m-audio/1m_64_500_100/: oracle_HNSW.txt
exp/ilab/static_query/yt8m-audio/1m_8_500_100/: compact.txt  oracle_HNSW.txt
exp/ilab/static_query/yt8m-video/1m_16_750_100/: build.txt  compact.txt  seg.txt
exp/ilab/static_query/yt8m-video/1m_32_1000_100/: seg.txt
exp/ilab/static_query/yt8m-video/1m_8_500_100/: build.txt  compact.txt  seg.txt
exp/mac/search/deep/100k/: compact_arbit.txt
exp/mac/search/deep/1M/: compact_arbit.txt  deep_arbit.txt
exp/mac/search/wiki-image/100k/: compact_arbit.txt
exp/mac/search/wiki-image/1M/: compact_arbit.txt
exp/mac/visualization_table/: deep_1M.md
exp/search/: compact_arbit.txt  deep_arbit.txt
exp/search/100k/: compact_arbit.txt  deep_arbit.txt  try_once_build_positive_edge.txt  try_onlinedomination.txt
exp/search/1M/: compact_arbit.txt  deep_arbit.txt  try_pruning_compact.txt
exp/search/1M_yt8m_audio/: fullrange_HNSW.txt
exp/search/deep/100k/: compact_arbit.txt  deep_arbit.txt  try_pruning_compact.txt
exp/search/deep/1M/: compact_arbit.txt  try_pruning_compact.txt
exp/search/wiki-image/100k/: deep_arbit.txt
exp/search/wiki-image/1M/: deep_arbit.txt
exp/search/yt8m-audio/100k/: compact_arbit.txt  deep_arbit.txt  try_pruning_compact.txt
exp/search/yt8m-audio/1M/: compact_arbit.txt  deep_arbit.txt  try_pruning_compact.txt
exp/visualization_table/: yt8m_1M.md
include/: base_index.h
include/common/: data_wrapper.h  sorted_array.h  utils.h
include/incremental_hnsw/: hnswalg.h  hnswlib.h
include/irange_util/: memory.hpp  searcher.hpp
index/ordered_stream/serf/deep/: file_sizes.txt
index/ordered_stream/serf/wiki-image/: file_sizes.txt
index/ordered_stream/serf/yt8m-video/: file_sizes.txt
index/yt8m-audio/: build.txt
log/: extractTimeAndSize.py  log_normal.txt  log_onlybaselvel.txt
log/NoSmallRangeStatic/: CompactOrdered_Stream_wiki-image_1m_32_1000_300.logbacup  CompactOrdered_Stream_yt8m-video_1m_32_1000_300.log2  CompactOrdered_Stream_yt8m-video_1m_32_1000_300.logback
script/: .nfs0000000001a7e8000002ce02  build_index.sh  exp1_query.sh  exp2.sh  exp2fororderedCompact.sh  generate_gt.sh  generate_gt.zsh  generate_incre_gt.sh  incremental_knn.sh  incremental_stream.sh  knn_first.sh  ordered_streamSerfVsDsg.sh  query_dsg.sh  query_index.sh  run_benchmark.sh  run_benchmark.zsh  run_compactgraph.sh  run_compactgraph.zsh  test_onlinedominate.sh
simulation/: IO.py  countRangePrunedTopk.py  countRangeTopkClosest.py  simulateHNSWCompressedVpivot.py  simulateMaxLeap.py  simulateNegativeMaxLeap.py  simulateTopkContainerSpeed.py  simulateUniqueTopkPos.py  testIntervalTree.py  util.py
simulation/draw/: draw_dominatedRegion.py  draw_sampleDominationDist.py  draw_table.py  visualize_counter.py
simulation/sample_data/: sampled_neighbors_domination.txt
simulation/simulate_fetch_nn/: testPointLevelNNFetch.py  testRtree.py
simulation/simulate_nn_drop_rule/: convert_json_2_pickle.py  draw_nn_size_dist.py  investigate_nn_dropping.py  print_One_path.py  sample_5prc_nn_along_search_path.py
simulation/topk_results/: DFS_relaxed_points.pkl  compare_topk_results.py  top_k_DFS.json  top_k_Optimization.json  top_k_bruteforce.json
src/: base_struct.h  compact_graph.h  compact_graph_0_0.h  compact_graph_0_1.h  compact_graph_1_0.h  index_base.h  index_recursion_batch.h  onlinedominate_graph.h  opt_dsg.h  segment_graph_1d.h  segment_graph_2d.h
src/base_hnsw/: bruteforce.h  hnswalg.h  hnswlib.h  visited_list_pool.h
src/baselines/: knn_first_hnsw.h
src/common/: data_wrapper.cc  reader.cc  utils.cc
test/: interval_tree_test  interval_tree_test.cpp
test_exp/deep/: add_negative_edges_compact_16_1000_300.txt
test_exp/deep/1M/: compact_16_1000_300.txt
unittest/: testSortedArray.cc
